[package]
name        = "md_viewer"
version     = "0.1.0"
description = "A light-weight Markdown Viewer Tauri application."
authors     = ["You"]
edition     = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name       = "md_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
comrak              = "0.29"                                   # Latest stable for GFM support
syntect             = "5.2"                                    # Syntax highlighting
