[package]
name        = "md_viewer"
version     = "0.1.0"
description = "A light-weight Markdown Viewer Tauri application."
authors     = ["You"]
edition     = "2021"

[lib]
name       = "md_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
comrak              = { version = "0.29", features = ["syntect"] }
tauri-plugin-dialog = "2.7.2"
tauri-plugin-fs = "2.5.1"
